--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,9 +2,10 @@
   author      = {Mrázek, Jan},
   title       = {RoFI – Distributed Metamorphic Robots},
   date        = {2019},
-  institution = {Masarykova univerzita, Fakulta informatiky, Brno},
+  institution = {Ma\-sa\-ry\-ko\-va univerzita, Fakulta informatiky, Brno},
   SUPERVISOR  = "Jiří Barnat", 
   langid      = {english},
+  url         = {https://is.muni.cz/th/y1s7e/}
 }
 
 @MASTERSTHESIS{vozarovaMasterThesis,
@@ -14,6 +15,7 @@
   institution = {Masarykova univerzita, Fakulta informatiky, Brno},
   SUPERVISOR  = "Ivana Černá", 
   langid      = {english},
+  url         = {https://is.muni.cz/th/w7y7w/}
 }
 @MASTERSTHESIS{nausovaBachelorThesis, 
   AUTHOR     = "Naušová, Markéta", 
@@ -23,6 +25,7 @@
   SCHOOL     = "Masarykova univerzita, Fakulta informatiky, Brno", 
   SUPERVISOR = "Ivana Černá", 
   langid     = {czech},
+  url        = {https://is.muni.cz/th/blt0z/}
 }
 
 @ONLINE{rofiGit,
@@ -66,4 +69,17 @@
   url       = {https://github.com/open-mpi/ompi}, 
   urldate   = {2019-05-22}, 
   langid    = {english}
+}
+
+@article{modularAdvantage,
+  author   = {Alberto Brunete and Avinash Ranganath and Sergio Segovia and Javier Perez de Frutos and Miguel Hernando and Ernesto Gambao},
+  title    = {Current trends in reconfigurable modular robots design},
+  journal  = {International Journal of Advanced Robotic Systems},
+  volume   = {14},
+  number   = {3},
+  year     = {2017},
+  doi      = {10.1177/1729881417710457},
+  URL      = {https://doi.org/10.1177/1729881417710457},
+  language = {english},
+  urldate  = {2019-05-22}
 }
