--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -107,6 +107,7 @@
 \begin{document}
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
+\cite{modularAdvantage}. 
 -- napisat strukturu celej prace!
 
 % ------------------------------------------------------ 1 ------------------------------------------------------
